# api/api_types.gen.go
@@ -3,6 +3,16 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.0 DO NOT EDIT.
 package api
 
+// Defines values for ApiDNSRecordRequestType.
+const (
+	A     ApiDNSRecordRequestType = "A"
+	AAAA  ApiDNSRecordRequestType = "AAAA"
+	CNAME ApiDNSRecordRequestType = "CNAME"
+	PTR   ApiDNSRecordRequestType = "PTR"
+	SRV   ApiDNSRecordRequestType = "SRV"
+	TXT   ApiDNSRecordRequestType = "TXT"
+)
+
 // ApiBlockingStatus defines model for api.BlockingStatus.
 type ApiBlockingStatus struct {
 	// AutoEnableInSec If blocking is temporary disabled: amount of seconds until blocking will be enabled
@@ -13,6 +23,42 @@ type ApiBlockingStatus struct {
 
 	// Enabled True if blocking is enabled
 	Enabled bool `json:"enabled"`
+}
+
+// ApiDNSRecord defines model for api.DNSRecord.
+type ApiDNSRecord struct {
+	// Domain Domain name
+	Domain string `json:"domain"`
+
+	// Ttl TTL in seconds
+	Ttl *int `json:"ttl,omitempty"`
+
+	// Type Record type (A, AAAA, TXT, CNAME, SRV, PTR)
+	Type string `json:"type"`
+
+	// Value Record value (IP address, hostname, text, etc.)
+	Value string `json:"value"`
+}
+
+// ApiDNSRecordRequest defines model for api.DNSRecordRequest.
+type ApiDNSRecordRequest struct {
+	// Ttl TTL in seconds (default: 3600)
+	Ttl *int `json:"ttl,omitempty"`
+
+	// Type Record type (A, AAAA, TXT, CNAME, SRV, PTR)
+	Type ApiDNSRecordRequestType `json:"type"`
+
+	// Value Record value (IP address, hostname, text, etc.)
+	Value string `json:"value"`
+}
+
+// ApiDNSRecordRequestType Record type (A, AAAA, TXT, CNAME, SRV, PTR)
+type ApiDNSRecordRequestType string
+
+// ApiDNSRecordsResponse defines model for api.DNSRecordsResponse.
+type ApiDNSRecordsResponse struct {
+	// Records List of DNS records
+	Records *[]ApiDNSRecord `json:"records,omitempty"`
 }
 
 // ApiQueryRequest defines model for api.QueryRequest.
@@ -47,6 +93,12 @@ type DisableBlockingParams struct {
 	// Groups groups to disable (comma separated). If empty, disable all groups
 	Groups *string `form:"groups,omitempty" json:"groups,omitempty"`
 }
+
+// AddDnsRecordJSONRequestBody defines body for AddDnsRecord for application/json ContentType.
+type AddDnsRecordJSONRequestBody = ApiDNSRecordRequest
+
+// UpdateDnsRecordJSONRequestBody defines body for UpdateDnsRecord for application/json ContentType.
+type UpdateDnsRecordJSONRequestBody = ApiDNSRecordRequest
 
 // QueryJSONRequestBody defines body for Query for application/json ContentType.
 type QueryJSONRequestBody = ApiQueryRequest
